--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/colors": "^2.1.0",
     "@svgdotjs/svg.js": "^3.1.2",
+    "async-mutex": "^0.4.1",
+    "dotenv": "^16.0.3",
     "mount-vue-component": "^0.10.2",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6",
-    "dotenv": "^16.0.3"
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
@@ -29,6 +30,7 @@
     "prettier": "^2.7.1",
     "typescript": "~4.7.4",
     "vite": "^4.0.0",
+    "vite-svg-loader": "^5.1.0",
     "vue-tsc": "^1.0.12"
   }
 }
